# actix-web-datetime

./: .gitignore  Cargo.toml  README.md  justfile
src/: main.rs
src/lib/: lib.rs
src/lib/routes/: health_check.rs
static/: screen.css
templates/: index.html
tests/api/: health_check.rs
